--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@tabler/icons-react": "^2.46.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
