--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^2.46.0",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.8",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
